--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
+    runtime: docker
     name: aurora
     env: docker
     dockerfilePath: ./Dockerfile
     plan: free
-
