--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,31 @@
+#services:
+#  - type: web
+#    runtime: docker
+#    name: aurora
+#    plan: free
 services:
   - type: web
-    runtime: docker
-    name: aurora
-    plan: free
+    name: goatcounter
+    env: docker
+    autoDeploy: false
+    envVars:
+      - key: DB_NAME
+        fromDatabase:
+          name: goatcounter-postgres
+          property: database
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: goatcounter-postgres
+          property: password
+      - key: DB_USER
+        fromDatabase:
+          name: goatcounter-postgres
+          property: user
+      - key: DB_CONNECTION_STRING
+        fromDatabase:
+          name: goatcounter-postgres
+          property: connectionString
+      - key: GC_USER_EMAIL
+        sync: false
+      - key: GC_PASSWORD
+        sync: false
