--- a/render.yaml
+++ b/render.yaml
@@ -2,26 +2,6 @@
 services:
   - type: web
     name: goatcounter
-    env: docker
-    autoDeploy: false
+    runtime: docker
     envVars:
       - key: DB_NAME
-        fromDatabase:
-          name: goatcounter-postgres
-          property: database
-      - key: DB_PASSWORD
-        fromDatabase:
-          name: goatcounter-postgres
-          property: password
-      - key: DB_USER
-        fromDatabase:
-          name: goatcounter-postgres
-          property: user
-      - key: DB_CONNECTION_STRING
-        fromDatabase:
-          name: goatcounter-postgres
-          property: connectionString
-      - key: GC_USER_EMAIL
-        sync: false
-      - key: GC_PASSWORD
-        sync: false
